@@ -1,1 +1,1 @@
-bash -c "CONFIG_SHELL=bash CC=gcc ./configure --target=basic --enable-bufferedlog %1 %2 %3 %4 %5 %6 %7 %8 %9"
+bash -c "CONFIG_SHELL=bash CC=gcc ./configure --enable-bufferedlog %1 %2 %3 %4 %5 %6 %7 %8 %9"
